# sqlite3pp

./: .clang-format  .clang-tidy  CMakeLists.txt  Database.h  DatabaseError.h  LICENSE.txt  README.md  conanfile.py  main.cpp
.github/conan-profiles/: linux-clang  linux-gcc-coverage  windows-clang  windows-msvc
.github/workflows/: build-multi-platform.yml  check-pr-code-quality.yml  check-test-coverage.yml  cmake-multi-platform.yml  contribution.yml  linters.yaml  linters.yml  pr-checks.yml  pr-code-format.yml  pr-code-quality.yml  pr-linters.yml  pr-test-coverage.yml
examples/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  Database.cpp  Database.h  ScopeGuard.h
main/: CMakeLists.txt  Database.h  DatabaseError.h  main.cpp
src/: CMakeLists.txt  Database.cpp  Database.h  DatabaseError.h  Row.cpp  Statement.cpp
src/api/: CMakeLists.txt
src/api/sqlite3pp/: BaseDefs.h  BaseDefs.hpp  Database.h  Database.hpp  Error.h  Error.hpp  Row.h  Row.hpp  Statement.h  Statement.hpp  Transaction.h  Transaction.hpp
src/examples/: CMakeLists.txt  main.cpp
src/impl/: CMakeLists.txt  Database.cpp  Row.cpp  Statement.cpp  Transaction.cpp
src/include/SQLite3pp/: Database.h  Error.h  Row.h  Statement.h
src/include/sqlite3pp/: Database.h  Error.h  Statement.h
src/test/: CMakeLists.txt  DatabaseTest.cpp
test/: CMakeLists.txt  DatabaseTest.cpp
test_package/: CMakeLists.txt  conanfile.py  pkgtest.cpp
