add_library(sqlite3pp_api INTERFACE)
target_include_directories(sqlite3pp_api INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

install(
    DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/sqlite3pp
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)


